@@ -32,9 +32,8 @@ Assertions
 #include "ink_unused.h"
 #include "ink_string.h"       /* MAGIC_EDITING_TAG */
 
-int
+void
 _ink_assert(const char *expression, const char *file, int line)
 {
   ink_fatal(1, "%s:%d: failed assert `%s`", file, line, expression);
-  return (0);
 }
