@@ -70,16 +70,6 @@ typedef void (*VI_PFN) (int);
 #define	NOWARN_UNUSED(x)	(void)(x)
 #define	NOWARN_UNUSED_RETURN(x)	if (x) {}
 
-/*  Enable this to get printf() style warnings on the Inktomi functions. */
-/* #define PRINTFLIKE(IDX, FIRST)  __attribute__((format (printf, IDX, FIRST))) */
-#if !defined(TS_PRINTFLIKE)
-#if defined(__GNUC__) || defined(__clang__)
-#define TS_PRINTFLIKE(fmt, arg) __attribute__((format(printf, fmt, arg)))
-#else
-#define TS_PRINTFLIKE(fmt, arg)
-#endif
-#endif
-
 /* Variables
 */
 extern int debug_level;
