@@ -255,4 +255,5 @@ ink_segv()
 {
   char *addr = NULL;
   *addr = 0;
+  ink_die_die_die(1); // just keep clang happy ... it thinks we return from here ...
 }
