@@ -36,6 +36,7 @@
 
 #include <stdio.h>
 #include <stdarg.h>
+#include "ink_apidefs.h"
 #include "ink_defs.h"
 
 int
