@@ -1,6 +1,8 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache Traffic Server 3.3.1
 
+  *) [TS-1464] mark ink_assert with the noreturn attribute
+
   *) [TS-1458] fix LuaJIT include ordering
 
   *) [TS-1454] crash when ic_hostname is null in cluster mode
